--- a/index.html
+++ b/index.html
@@ -5,33 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./font/fontawesome-5.15.1/css/all.min.css" />
-    <title>Quản lý khách hàng</title>
+    <title>Quản lý Nhân viên</title>
   </head>
   <body>
-    <!-- <div class="modal show">
-      <img class="modal-close" src="./icon/x.svg" alt="this-is-icon" />
-      <div class="modal-wrapper">
-        <div class="modal-top"><h2>Thông tin khách hàng</h2></div>
-        <div class="modal-content">
-          <div class="info">
-            <div class="info-left">
-              <a href="#!"><img src="./img/default-avatar.jpg" alt="this-is-avatar" /></a>
-              (vui lòng chọn ảnh có định dạng .jpg, .jpeg, .png, .gif)
-            </div>
-            <div class="info-right">
-              <h3>Thông tin chung</h3>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="modal-bottom modal-bottom--primary">
-        <button class="modal-bottom__close">Huỷ</button
-        ><button class="modal-bottom__remove">
-          <i class="far fa-save"></i> Lưu
-        </button>
-      </div>
-    </div> -->
-
     <div class="wrapper">
       <div class="menu">
         <div class="menu-top">
@@ -76,7 +52,7 @@
           <li class="menu-list__item">
             <a href="#!">
               <img src="./icon/dic-employee.png" alt="this-is-icon" />
-              Danh mục khách hàng
+              Danh mục Nhân viên
             </a>
           </li>
           <li class="menu-list__item">
@@ -103,11 +79,11 @@
         </div>
 
         <div class="content-member">
-          <h1>Danh sách khách hàng</h1>
+          <h1>Danh sách Nhân viên</h1>
 
           <a href="#!" class="content-member__add">
             <i class="fas fa-user-plus"></i>
-            Thêm khách hàng
+            Thêm Nhân viên
           </a>
         </div>
 
@@ -142,14 +118,14 @@
           <div class="table-head">
             <table>
               <tr>
-                <th>Mã khách hàng</th>
+                <th>Mã Nhân viên</th>
                 <th>Họ và tên</th>
                 <th>Giới tính</th>
                 <th>Ngày sinh</th>
                 <th>Điện thoại</th>
                 <th>Email</th>
-                <th>Địa chỉ</th>
-                <th>Công ty</th>
+                <th>Chức vụ</th>
+                <th>Phòng ban</th>
                 <th>Mức lương cơ bản</th>
                 <th>Tình trạng công việc</th>
               </tr>
@@ -158,15 +134,231 @@
           <div class="table-wrapper">
             <div class="table-body">
               <table>
-                <tbody></tbody>
+                <tbody>
+                  <tr>
+                    <td>NV0009999</td>
+                    <td>Nguyễn Thành An</td>
+                    <td>Nam</td>
+                    <td>24/01/1994</td>
+                    <td>0944049616</td>
+                    <td>thanhnamvip1994@gmail.com</td>
+                    <td>Thu ngân</td>
+                    <td>Phòng nhân sự</td>
+                    <td>15.509.169</td>
+                    <td>Đang thử việc</td>
+                  </tr>
+                  <tr>
+                    <td>NV0009999</td>
+                    <td>Nguyễn Thành An</td>
+                    <td>Nam</td>
+                    <td>24/01/1994</td>
+                    <td>0944049616</td>
+                    <td>thanhnamvip1994@gmail.com</td>
+                    <td>Thu ngân</td>
+                    <td>Phòng nhân sự</td>
+                    <td>15.509.169</td>
+                    <td>Đang thử việc</td>
+                  </tr>
+                  <tr>
+                    <td>NV0009999</td>
+                    <td>Nguyễn Thành An</td>
+                    <td>Nam</td>
+                    <td>24/01/1994</td>
+                    <td>0944049616</td>
+                    <td>thanhnamvip1994@gmail.com</td>
+                    <td>Thu ngân</td>
+                    <td>Phòng nhân sự</td>
+                    <td>15.509.169</td>
+                    <td>Đang thử việc</td>
+                  </tr>
+                  <tr>
+                    <td>NV0009999</td>
+                    <td>Nguyễn Thành An</td>
+                    <td>Nam</td>
+                    <td>24/01/1994</td>
+                    <td>0944049616</td>
+                    <td>thanhnamvip1994@gmail.com</td>
+                    <td>Thu ngân</td>
+                    <td>Phòng nhân sự</td>
+                    <td>15.509.169</td>
+                    <td>Đang thử việc</td>
+                  </tr>
+                  <tr>
+                    <td>NV0009999</td>
+                    <td>Nguyễn Thành An</td>
+                    <td>Nam</td>
+                    <td>24/01/1994</td>
+                    <td>0944049616</td>
+                    <td>thanhnamvip1994@gmail.com</td>
+                    <td>Thu ngân</td>
+                    <td>Phòng nhân sự</td>
+                    <td>15.509.169</td>
+                    <td>Đang thử việc</td>
+                  </tr>
+                  <tr>
+                    <td>NV0009999</td>
+                    <td>Nguyễn Thành An</td>
+                    <td>Nam</td>
+                    <td>24/01/1994</td>
+                    <td>0944049616</td>
+                    <td>thanhnamvip1994@gmail.com</td>
+                    <td>Thu ngân</td>
+                    <td>Phòng nhân sự</td>
+                    <td>15.509.169</td>
+                    <td>Đang thử việc</td>
+                  </tr>
+                  <tr>
+                    <td>NV0009999</td>
+                    <td>Nguyễn Thành An</td>
+                    <td>Nam</td>
+                    <td>24/01/1994</td>
+                    <td>0944049616</td>
+                    <td>thanhnamvip1994@gmail.com</td>
+                    <td>Thu ngân</td>
+                    <td>Phòng nhân sự</td>
+                    <td>15.509.169</td>
+                    <td>Đang thử việc</td>
+                  </tr>
+                  <tr>
+                    <td>NV0009999</td>
+                    <td>Nguyễn Thành An</td>
+                    <td>Nam</td>
+                    <td>24/01/1994</td>
+                    <td>0944049616</td>
+                    <td>thanhnamvip1994@gmail.com</td>
+                    <td>Thu ngân</td>
+                    <td>Phòng nhân sự</td>
+                    <td>15.509.169</td>
+                    <td>Đang thử việc</td>
+                  </tr>
+                  <tr>
+                    <td>NV0009999</td>
+                    <td>Nguyễn Thành An</td>
+                    <td>Nam</td>
+                    <td>24/01/1994</td>
+                    <td>0944049616</td>
+                    <td>thanhnamvip1994@gmail.com</td>
+                    <td>Thu ngân</td>
+                    <td>Phòng nhân sự</td>
+                    <td>15.509.169</td>
+                    <td>Đang thử việc</td>
+                  </tr>
+                  <tr>
+                    <td>NV0009999</td>
+                    <td>Nguyễn Thành An</td>
+                    <td>Nam</td>
+                    <td>24/01/1994</td>
+                    <td>0944049616</td>
+                    <td>thanhnamvip1994@gmail.com</td>
+                    <td>Thu ngân</td>
+                    <td>Phòng nhân sự</td>
+                    <td>15.509.169</td>
+                    <td>Đang thử việc</td>
+                  </tr>
+                  <tr>
+                    <td>NV0009999</td>
+                    <td>Nguyễn Thành An</td>
+                    <td>Nam</td>
+                    <td>24/01/1994</td>
+                    <td>0944049616</td>
+                    <td>thanhnamvip1994@gmail.com</td>
+                    <td>Thu ngân</td>
+                    <td>Phòng nhân sự</td>
+                    <td>15.509.169</td>
+                    <td>Đang thử việc</td>
+                  </tr>
+                  <tr>
+                    <td>NV0009999</td>
+                    <td>Nguyễn Thành An</td>
+                    <td>Nam</td>
+                    <td>24/01/1994</td>
+                    <td>0944049616</td>
+                    <td>thanhnamvip1994@gmail.com</td>
+                    <td>Thu ngân</td>
+                    <td>Phòng nhân sự</td>
+                    <td>15.509.169</td>
+                    <td>Đang thử việc</td>
+                  </tr>
+                  <tr>
+                    <td>NV0009999</td>
+                    <td>Nguyễn Thành An</td>
+                    <td>Nam</td>
+                    <td>24/01/1994</td>
+                    <td>0944049616</td>
+                    <td>thanhnamvip1994@gmail.com</td>
+                    <td>Thu ngân</td>
+                    <td>Phòng nhân sự</td>
+                    <td>15.509.169</td>
+                    <td>Đang thử việc</td>
+                  </tr>
+                  <tr>
+                    <td>NV0009999</td>
+                    <td>Nguyễn Thành An</td>
+                    <td>Nam</td>
+                    <td>24/01/1994</td>
+                    <td>0944049616</td>
+                    <td>thanhnamvip1994@gmail.com</td>
+                    <td>Thu ngân</td>
+                    <td>Phòng nhân sự</td>
+                    <td>15.509.169</td>
+                    <td>Đang thử việc</td>
+                  </tr>
+                  <tr>
+                    <td>NV0009999</td>
+                    <td>Nguyễn Thành An</td>
+                    <td>Nam</td>
+                    <td>24/01/1994</td>
+                    <td>0944049616</td>
+                    <td>thanhnamvip1994@gmail.com</td>
+                    <td>Thu ngân</td>
+                    <td>Phòng nhân sự</td>
+                    <td>15.509.169</td>
+                    <td>Đang thử việc</td>
+                  </tr>
+                  <tr>
+                    <td>NV0009999</td>
+                    <td>Nguyễn Thành An</td>
+                    <td>Nam</td>
+                    <td>24/01/1994</td>
+                    <td>0944049616</td>
+                    <td>thanhnamvip1994@gmail.com</td>
+                    <td>Thu ngân</td>
+                    <td>Phòng nhân sự</td>
+                    <td>15.509.169</td>
+                    <td>Đang thử việc</td>
+                  </tr>
+                  <tr>
+                    <td>NV0009999</td>
+                    <td>Nguyễn Thành An</td>
+                    <td>Nam</td>
+                    <td>24/01/1994</td>
+                    <td>0944049616</td>
+                    <td>thanhnamvip1994@gmail.com</td>
+                    <td>Thu ngân</td>
+                    <td>Phòng nhân sự</td>
+                    <td>15.509.169</td>
+                    <td>Đang thử việc</td>
+                  </tr>
+                  <tr>
+                    <td>NV0009999</td>
+                    <td>Nguyễn Thành An</td>
+                    <td>Nam</td>
+                    <td>24/01/1994</td>
+                    <td>0944049616</td>
+                    <td>thanhnamvip1994@gmail.com</td>
+                    <td>Thu ngân</td>
+                    <td>Phòng nhân sự</td>
+                    <td>15.509.169</td>
+                    <td>Đang thử việc</td>
+                  </tr>
+                </tbody>
               </table>
             </div>
           </div>
         </div>
 
         <div class="footer">
-          <span class="footer-text">Hiển thị 1-10/1000 khách hàng</span>
-
+          <span class="footer-text">Hiển thị 1-10/1000 Nhân viên</span>
           <div class="footer-pagination">
             <button class="footer-pagination__btn">
               <img src="./icon/btn-firstpage.svg" alt="" />
@@ -188,7 +380,7 @@
             </button>
           </div>
 
-          <span class="footer-text">10 khách hàng/trang</span>
+          <span class="footer-text">10 Nhân viên/trang</span>
         </div>
       </div>
     </div>
